Moved creation of helper objects behind loading data to solve issue switching views, moved reset button below save button

--- a/app/styles/analyticsviewer.scss
+++ b/app/styles/analyticsviewer.scss
@@ -201,12 +201,12 @@ text.nvd3.nv-noData {
 }
 
 #resetZoom{
-    margin-top: 7px;
+    margin-top: 45px;
     position: absolute;
     padding: 2px 7px 1px 7px;
     font-size: 20px;
     z-index: 20;
-    margin-left: 38px;
+    /*/margin-left: 8px;*/
 }
 
 #filterSelectDrop{
